# SpriteChat

./: CMakeLists.txt  SpriteChat.qrc  changelog.md  configure.sh
.github/workflows/: build.yml
resource/: SpriteChat.rc  about.md
resource/ui/: direct_connect_dialog.ui  favorite_server_dialog.ui  loading_window.ui  lobby.ui  message_dialog.ui  options_dialog.ui
scripts/: SpriteChat.desktop  launch.sh  wasabi_program.sh
src/: animationlayer.cpp  animationlayer.h  animationloader.cpp  aoapplication.cpp  aoapplication.h  aoapplication_network.cpp  aoapplication_pathsystem.cpp  aoapplication_readwrite.cpp  aoblipplayer.cpp  aoblipplayer.h  aobutton.cpp  aobutton.h  aocharbutton.cpp  aocharbutton.h  aoemotebutton.cpp  aoemotebutton.h  aoemotepreview.cpp  aoemotepreview.h  aoevidencebutton.cpp  aoevidencebutton.h  aoevidencedisplay.cpp  aoevidencedisplay.h  aoimage.cpp  aoimage.h  aomusicplayer.cpp  aomusicplayer.h  aosfxplayer.cpp  aosfxplayer.h  aotextboxwidgets.cpp  assetpathresolver.cpp  assetpathresolver.h  courtroom.cpp  courtroom.h  courtroom_charselect.cpp  courtroom_emotes.cpp  courtroom_evidence.cpp  datatypes.cpp  datatypes.h  debug_functions.cpp  discord_rich_presence.cpp  (+21 more)
src/gui/: guiloader.cpp  guiloader.h  guiutils.cpp  guiutils.h
src/network/: masterapigateway.cpp  masterapigateway.h  masterapistatuspublisher.cpp  masterapistatuspublisher.h
src/widget/: directconnectdialog.cpp  directconnectdialog.h  flipbutton.cpp  flipbutton.h  loadingwindow.cpp  loadingwindow.h  messagedialog.cpp  messagedialog.h  moderatordialog.cpp  moderatordialog.h  optionswindow.cpp  optionswindow.h  playerlistwidget.cpp  playerlistwidget.h  servereditordialog.cpp  servereditordialog.h
